tests/typechecking/valid/nested let.ml
let x = 1+1 in
let y = 1+0 in 
let z = x+x in 
print_int (x+1+z)
