tests/typechecking/invalid/array OutOfIndex.ml
let arr = Array.create 1 1 in 
arr.(0)<-(-1);
arr.(1)<-(1);
print_int arr.(0)
